Mon Jan 13 14:55:31 2014  Zachary Scott  <e@zzak.io>

	* lib/xmlrpc/client.rb: [DOC] Remove note about SSL package on RAA
	  Since RAA has been deprecated, and the SSL package has been replaced
	  with net/https this statement is entirely false and should be
	  deleted. [Bug #9152]

Mon Jan 13 14:47:07 2014  Zachary Scott  <e@zzak.io>

	* lib/net/smtp.rb: [DOC] Remove dead link to RAA by Giorgos Tsiftsis
	  Fixes the following bugs: [Bug #9152] [Bug #9268] [Bug #9394]
	* lib/open-uri.rb: ditto

Mon Jan 13 14:25:55 2014  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_pkey_dh.c: Fixed typo by Sandor Sz?cs [Bug #9243]

Mon Jan 13 12:03:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/thread/thread.c (rb_szqueue_push): check GET_SZQUEUE_WAITERS
	  instead of GET_QUEUE_WAITERS to prevent deadlock. Patch by Eric Wong.
	  [Bug #9302] [ruby-core:59324]

	* test/thread/test_queue.rb: add test

Sun Jan 12 16:41:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseq_load): keep type_map to get rid of memory leak.
	  based on a patch by Eric Wong at [ruby-core:59699].  [Bug #9399]

Sun Jan 12 09:21:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/util.h (DECIMAL_SIZE_OF_BITS): a preprocessor
	  constant macro to approximate decimal representation size of n-bits
	  integer.

	* iseq.c (register_label): use DECIMAL_SIZE_OF_BITS for better
	  approximation.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): ditto.

	* common.mk (iseq.o), ext/bigdecimal/depend (bigdecimal.o): add
	  dependency to ruby/util.h for DECIMAL_SIZE_OF_BITS.

Fri Jan 10 16:27:20 2014  Yuki Yugui Sonoda  <yugui@google.com>

	* vm_exec.c (cfp): Avoid generating invalid binary for
	  NativeClient.
	  r15 on x86_64 is reserved by NativeClient.  So r15 to cfp used to
	  generate invalid binary under some combinations of compiler
	  optimization flags.

Fri Jan 10 18:01:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
